# DevApp36t

./: README.md  pyproject.toml
app36t/: hooks.py  modules.txt
app36t/fixtures/: custom_field.json
app36t/job_applicant/doctype/applicant_dependants/: applicant_dependants.js  applicant_dependants.json  applicant_dependants.py  test_applicant_dependants.py
app36t/job_applicant/doctype/applicant_profile/: applicant_profile.js  applicant_profile.json  applicant_profile.py  test_applicant_profile.py
